# homeworks

./: .gitignore  Dockerfile  README.md  autograder.md
.github/workflows/: trigger-website.yml
1-primer/src/: lib.rs
1-primerlab/: Makefile  README.md  handin.tar
1-primerlab/src/: lib.rs  main.rs
2-get_owned/src/: lib.rs
2-getownedlab/src/: lib.rs
3-hw/src/: book.rs
3-pokelab/src/: book.rs  lib.rs
common/: build.rs
derive_map/refsol/: lib.rs
infra/pack/: Cargo.toml  test.rs
infra/pack/src/: main.rs
parser_combinator/: Cargo.toml
past_homeworks/ppm_parsing/: .gitattributes
ppm_parsing/: Cargo.toml  big_image.ppm  handout.tex  horiztest.ppm  tiny_image.ppm
ppm_parsing/handout/: handout.tex
ppm_parsing/refsol/: Cargo.toml
ppm_parsing/src/: main.rs  ppm.rs  ppm_refsol.rs
solutions/week3/: Cargo.toml
solutions/week5/: Cargo.toml
sudoku_solver/: board3.sudoku
sudoku_solver/handout/: handout.tex
sudoku_solver/refsol/: board1.sudoku  board3.sudoku  board4.sudoku  invalid.sudoku
sudoku_solver/src/: main.rs  sudoku.rs  sudoku_refsol.rs  types.rs
week1/autograder/: Dockerfile
week1/primerlab/: Cargo.toml  README.md  build.rs
week1/primerlab_ref/: Cargo.toml  README.md  build.rs
week1/primerlab_refsol/: Cargo.toml  Makefile  README.md
week10/filterlab/: Cargo.toml
week10/filterlab_ref/: Cargo.toml
week10/filterlab_ref_jess/: Cargo.toml
week12/rowlab/: Cargo.toml
week12/rowlab_ref/: Cargo.toml
week2/autograder/: Dockerfile
week2/getownedlab/: README.md
week3/: README.md
week5/: README.md
week6/: README.md
(+363 files in other folders)
